refactoring to decrease the quantity of projects